@@ -1,3 +1,10 @@
+2009-05-04  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOO.c (InitFoundation, Deleted*Namespace, AllocClass):
+	* generic/tclOODefineCmds.c (InitDefineContext): Make sure that when
+	support namespaces are deleted, nothing bad can subsequently happen.
+	Issue spotted by Don Porter.
+
 2009-05-03  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/Tcl.n: [Bug 2538432]: Clarified exact treatment of ${arr(idx)}
